# bazel_test

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel
src/: BUILD.bazel  main.cc
