module(name = "bazel_test", version = "0.0.1")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Use the system's pkg-config instead of building from source.
# The bundled glib in rules_foreign_cc's pkg-config bootstrap uses `bool`
# as a struct field name, which fails with GCC 15 (default -std=c23).
register_toolchains("@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sdl_src",
    urls = ["https://github.com/libsdl-org/SDL/releases/download/release-3.4.4/SDL3-3.4.4.tar.gz"],
    strip_prefix = "SDL3-3.4.4",
    sha256 = "ee712dbe6a89bb140bbfc2ce72358fb5ee5cc2240abeabd54855012db30b3864",
    build_file_content = """
filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
)